Implement manual focus on click

Summary:
Currently only the first created screenlock window gets focus.
On clicks, no focus events are sent, which makes it impossible to input
passwords. This patch now makes it possible to focus to a different
screenlock window (on a different monitor, for example) using a mouse
button press.
This should also fix newly created screenlock windows stealing the focus
of already displayed ones as only the first window gains automatic focus.

BUG: 348789
BUG: 374289

Test Plan:
Locked the screen, now I can use the password input on the secondary screen
as well.

Reviewers: #plasma, graesslin, broulik

Reviewed By: #plasma, graesslin

Subscribers: hein, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4821